book deletion  handled as well as stackable grid overlap issue

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -12,6 +12,10 @@ input {
 	border-radius: 0.28571429rem !important;
 }
 
+#nav-logo {
+	font-weight: bold;
+}
+
 #brand-title {
 	margin-top: 0 !important;
 	font-weight: 510;
@@ -71,6 +75,11 @@ input {
 	padding-right: 0;
 }
 
+#delete-col {
+	align-self: center;
+	vertical-align: middle;
+}
+
 .list-image {
 	width: 75%;
 }
@@ -102,6 +111,8 @@ input {
 
 #results-div {
 	visibility: hidden;
+	z-index: 998;
+	position: absolute;
 }
 .results-image {
 	width: 40%;
@@ -109,4 +120,14 @@ input {
 .results-segment {
 	margin-top: 0 !important;
 	margin-bottom: 0 !important;
+}
+
+#list-submit-btn {
+	visibility: hidden;
+	background-color: rgb(82, 87, 107);
+	color: white;
+}
+
+#list-submit-btn:hover {
+	background-color: rgb(39, 34, 76) !important;
 }
